--- a/src/routes/main/mainStyle.css
+++ b/src/routes/main/mainStyle.css
@@ -1,4 +1,4 @@
-.circle {
+.keys {
 	position: relative;
 }
 
